added product data in table

--- a/src/app/dashboard/entry-data-table/entry-data-table.component.html
+++ b/src/app/dashboard/entry-data-table/entry-data-table.component.html
@@ -10,10 +10,6 @@
 <div class="data-table-container h-100">
 
     <div class="detail-section d-flex" *ngIf="isCustomer">
-        <div class="data-card d-flex flex-column" [ngClass]="{'danger':pendingUnit>0}">
-            <span class="bold-text">Pending Units</span>
-            <span class="secondary-color mt-1">{{pendingUnit}} Units</span>
-        </div>
         <div class="data-card d-flex flex-column" [ngClass]="{'danger':dueAmount>0}">
             <span class="bold-text">Due Amount</span>
             <span class="secondary-color mt-1">{{dueAmount | number: '1.2-2'}} Rs</span>
@@ -85,6 +81,13 @@
         <div class="nowrap">
             <span class="name-text" (click)="editEntry(value)" tabindex="0" *ngIf="isCustomer">Edit | </span>
             <span class="name-text" (click)="showMore(value)" tabindex="0">More</span>
+        </div>
+    </ng-template>
+
+    <ng-template #productDetail let-value let-column="column">
+        <div *ngFor="let data of value.productDetail" class="my-2">
+            <span *ngIf="column.isAmount">{{getValue(data, column.key) | number: '1.2-2'}}</span>
+            <span *ngIf="!column.isAmount" class="nowrap">{{getValue(data, column.key)}}</span>
         </div>
     </ng-template>
 </div>
