dunamically check if product is recieveable or not

--- a/src/app/dashboard/inventory/new-full-entry/new-full-entry.component.html
+++ b/src/app/dashboard/inventory/new-full-entry/new-full-entry.component.html
@@ -89,6 +89,7 @@
                                         <input class="product-input" maxlength="4" value="0" type="number"
                                             [id]="'sent_'+product.data.productId" min="0">
                                         <input class="product-input" maxlength="4" value="0" type="number"
+                                            [disabled]="!product.data.productReturnable"
                                             [id]="'recieved_'+product.data.productId" min="0">
                                     </div>
                                 </div>
