--- a/src/app/dashboard/inventory/new-full-entry/new-full-entry.component.scss
+++ b/src/app/dashboard/inventory/new-full-entry/new-full-entry.component.scss
@@ -123,6 +123,11 @@
                 padding: 3px 6px;
                 border-radius: 5px;
                 border: 1px solid $secondary-color;
+
+                &:disabled {
+                    border: 1px solid $border-light;
+                    color: $border-light;
+                }
             }
 
             .product-submit {
