--- a/src/app/dashboard/warehouse/warehouse.component.scss
+++ b/src/app/dashboard/warehouse/warehouse.component.scss
@@ -30,14 +30,31 @@
     }
 
     .product-form {
-        padding: 10px;
+        padding: 10px 10px 5px 10px;
         gap: 10px;
         border-radius: 10px;
         box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.3);
         min-width: 347px;
 
+        .adjust-form {
+            display: flex;
+        }
+
+        @media(max-width: 1024px) {
+            .adjust-form {
+                display: block;
+            }
+        }
+
+        @media(max-width: 716px) {
+            .box-input {
+                flex-grow: 1;
+            }
+        }
+
         .save-btn {
             height: auto;
+            min-height: 36px;
             font-family: "Comfortaa", serif;
             border-radius: 5px;
             box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.3);
