--- a/src/app/common/user-details/user-details.component.html
+++ b/src/app/common/user-details/user-details.component.html
@@ -16,9 +16,10 @@
             (click)="copyData(data.address)" tabindex="0">
     </div>
     <div class="d-flex align-items-center mt-1" *ngIf="data.shippingAddress">
-        <span class="me-3 label-span small-text noWrap">Shipping Address 
-            <span *ngIf="data.shippingAddress.length>1" class="show-more-address" title="Show More address" (click)="showMoreAddress = !showMoreAddress" tabindex="0">...</span>
-        </span>
+        <span *ngIf="data.shippingAddress.length > 1" class="me-3 label-span small-text noWrap show-more-address"
+            (click)="showMoreAddress = !showMoreAddress" tabindex="0">Shipping Address...</span>
+        <span *ngIf="data.shippingAddress.length === 1" class="me-3 label-span small-text noWrap">Shipping
+            Address</span>
         <span class="bold-text letter-spacing-1 me-2 noWrap">{{data.shippingAddress}}</span>
         <img src="../../../assets/images/svg/copy.svg" alt="copy" class="copy-icon" title="Copy shipping address"
             (click)="copyData(data.shippingAddress[0])" tabindex="0">
