--- a/src/app/dashboard/entry-data-table/entry-data-table.component.html
+++ b/src/app/dashboard/entry-data-table/entry-data-table.component.html
@@ -92,7 +92,7 @@
             <span *ngIf="column.isAmount">{{getValue(data, column.key) | number: '1.2-2'}}</span>
             <span *ngIf="!column.isAmount" class="nowrap">
                 <span *ngIf="!column.isLink">{{getValue(data, column.key)}}</span>
-                <div *ngIf="column.isLink" class="name-text" (click)="openProduct(data)">
+                <div *ngIf="column.isLink" class="name-text" (click)="openProduct(data)" tabindex="0">
                     {{getValue(data, column.key)}}
                 </div>
             </span>
