--- a/src/app/dashboard/inventory/inventory.component.html
+++ b/src/app/dashboard/inventory/inventory.component.html
@@ -7,7 +7,7 @@
 </div>
 
 <div class="parent-inventory h-100">
-    <div class="inventory-container d-flex flex-column h-100">
+    <div class="inventory-container d-flex flex-column">
         <div class="d-flex align-items-center flex-wrap gap-15 justify-content-between">
             <div class="flex-grow-1 d-flex align-items-center">
                 <input class="capsule search-box flex-grow-1" type="text" placeholder="Search in inventory"
@@ -50,18 +50,18 @@
                         </div>
                     </div>
                 </div>
-                <div class="p-relative" *ngIf="shippingAddressList && shippingAddressList.length>0">
-                    <div class="address-selector capsule gap" (click)="onfocus('addressDropdowm')" tabindex="0">
+                <div class="p-relative flex-grow-1" *ngIf="shippingAddressList && shippingAddressList.length>0">
+                    <div class="field-selector capsule gap" (click)="onfocus('addressDropdowm')" tabindex="0">
                         <span class="secondary-color" *ngIf="shippingAddressSubmitted.length === 0">
                             Select Address</span>
-                        <span class="address-capsule d-flex align-items-center"
+                        <span class="field-capsule d-flex align-items-center"
                             *ngFor="let address of shippingAddressSubmitted; let i = index">
                             <span class="nowrap limit-width-150">{{address}}</span>
                             <img src="assets/images/svg/close.svg" alt="X" height="16px" class="ms-1"
                                 (click)="removeAddress($event, i)" tabindex="0">
                         </span>
                     </div>
-                    <div class="select-dropdown hight-no-limit" *ngIf="focusedFormName === 'addressDropdowm'">
+                    <div class="select-dropdown" *ngIf="focusedFormName === 'addressDropdowm'">
                         <div class="profile" *ngFor="let address of shippingAddressList"
                             (click)="toggleSelectAddress(address)" tabindex="0">
                             <div class="d-flex justify-content-between align-items-center">
@@ -70,16 +70,40 @@
                                     *ngIf="shippingAddressSelectedList.includes(address)">
                             </div>
                         </div>
-                        <div class="address-submit" (click)="submitAddressFilters()" tabindex="0"
+                        <div class="field-submit" (click)="submitAddressFilters()" tabindex="0"
                             *ngIf="shippingAddressSelectedList.length>0">Submit</div>
                     </div>
                 </div>
+                <div class="p-relative flex-grow-1" *ngIf="productList && productList.length>0">
+                    <div class="field-selector capsule gap" (click)="onfocus('productDropdown')" tabindex="0">
+                        <span class="secondary-color" *ngIf="productSubmitted.length === 0">
+                            Select Product</span>
+                        <span class="field-capsule d-flex align-items-center"
+                            *ngFor="let product of productSubmitted; let i = index">
+                            <span class="nowrap limit-width-150">{{product.data.name}}</span>
+                            <img src="assets/images/svg/close.svg" alt="X" height="16px" class="ms-1"
+                                (click)="removeProduct($event, i)" tabindex="0">
+                        </span>
+                    </div>
+                    <div class="select-dropdown" *ngIf="focusedFormName === 'productDropdown'">
+                        <div class="profile" *ngFor="let product of productList" (click)="toggleSelectProduct(product)"
+                            tabindex="0">
+                            <div class="d-flex justify-content-between align-items-center">
+                                {{product.data.name}}
+                                <img src="assets/images/svg/tick.svg" alt="✔️" height="24px"
+                                    *ngIf="productSelectedList.includes(product)">
+                            </div>
+                        </div>
+                        <div class="field-submit" (click)="submitProductFilters()" tabindex="0"
+                            *ngIf="productSelectedList.length>0">Submit</div>
+                    </div>
+                </div>
             </div>
-            <img src="assets/images/svg/close-circle.svg" alt="Close" class="close-icon" (click)="closeFilter()"
+            <img src="assets/images/svg/close-circle.svg" alt="Close" class="close-icon ms-2" (click)="closeFilter()"
                 tabindex="0">
         </div>
 
-        <div class="w-100 table-div mt-4">
+        <div class="w-100 table-div mt-4 flex-grow-1">
             <table *ngIf="dataSource.data && dataSource.data.length>0" mat-table [dataSource]="dataSource"
                 class="custom-table">
                 <tr mat-header-row *matHeaderRowDef="displayedColumns()" class="custom-header-row nowrap"></tr>
@@ -109,10 +133,46 @@
             </div>
         </div>
 
-        <div class="footer-section d-flex justify-content-end gap-15 w-100 flex-wrap">
-            <span>Sent: {{getStat('sentSum')}}</span>
-            <span>Recieved: {{getStat('recieveSum')}}</span>
-            <span>Pending: {{getStat('pending')}}</span>
+        <div class="footer-section d-flex gap-15 flex-wrap" #statArea>
+            <div class="p-relative d-flex">
+                <div class="list-view d-flex flex-column"
+                    *ngIf="statistics?.sentList?.length>0 && focusedFormName === 'sentList'">
+                    <div class="d-flex justify-content-between gap" *ngFor="let obj of statistics?.sentList">
+                        <span class="nowrap" [ngClass]="obj.customClass">{{obj.name}}</span>
+                        <span>{{obj.value}}</span>
+                    </div>
+                </div>
+                <span class="isclickable" (click)="getDetailedStat('sentList', 'sentSum')" tabindex="0">
+                    Sent: {{getStat('sentSum')}}
+                </span>
+            </div>
+
+            <div class="p-relative d-flex">
+                <div class="list-view d-flex flex-column"
+                    *ngIf="statistics?.recieveList?.length>0 && focusedFormName === 'recieveList'">
+                    <div class="d-flex justify-content-between gap" *ngFor="let obj of statistics?.recieveList">
+                        <span class="nowrap" [ngClass]="obj.customClass">{{obj.name}}</span>
+                        <span>{{obj.value}}</span>
+                    </div>
+                </div>
+                <span class="isclickable" (click)="getDetailedStat('recieveList', 'recieveSum')" tabindex="0">
+                    Recieved: {{getStat('recieveSum')}}
+                </span>
+            </div>
+
+            <div class="p-relative d-flex">
+                <div class="list-view d-flex flex-column"
+                    *ngIf="statistics?.pendingList?.length>0 && focusedFormName === 'pendingList'">
+                    <div class="d-flex justify-content-between gap" *ngFor="let obj of statistics?.pendingList">
+                        <span class="nowrap" [ngClass]="obj.customClass">{{obj.name}}</span>
+                        <span>{{obj.value}}</span>
+                    </div>
+                </div>
+                <span class="isclickable" (click)="getDetailedStat('pendingList', 'pending')" tabindex="0">
+                    Pending: {{getStat('pending')}}
+                </span>
+            </div>
+
             <span>Due Amount: {{getStat('dueAmt') | number: '1.2-2'}}</span>
         </div>
 
@@ -148,7 +208,7 @@
                 <span *ngIf="column.isAmount">{{getValue(data, column.key) | number: '1.2-2'}}</span>
                 <span *ngIf="!column.isAmount" class="nowrap">
                     <span *ngIf="!column.isLink">{{getValue(data, column.key)}}</span>
-                    <div *ngIf="column.isLink" class="name-text" (click)="openProduct(data)">
+                    <div *ngIf="column.isLink" class="name-text" (click)="openProduct(data)" tabindex="0">
                         {{getValue(data, column.key)}}
                     </div>
                 </span>
