--- a/src/app/dashboard/new-account/new-account.component.html
+++ b/src/app/dashboard/new-account/new-account.component.html
@@ -20,7 +20,7 @@
             <mat-form-field appearance="outline" class="w-100">
                 <mat-label>Contact number</mat-label>
                 <input matInput placeholder="xxxx xxx xxx" prefix="+91 " [maxLength]="16" autocomplete="off"
-                    mask="0000 000 000" formControlName="phoneNumber">
+                    mask="00000 00000" formControlName="phoneNumber">
                 <mat-hint class="error-msg"
                     *ngIf="accountForm.get('phoneNumber')?.touched && accountForm.get('phoneNumber')?.invalid">{{getErrorMessage('phoneNumber')}}</mat-hint>
             </mat-form-field>
